--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@antv/g6": "^3.3.6",
     "core-js": "^2.6.5",
     "element-ui": "^2.3.6",
     "vue": "^2.6.10",
