--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@antv/g6": "^3.3.6",
+    "axios": "^0.19.2",
     "core-js": "^2.6.5",
     "element-ui": "^2.3.6",
+    "mockjs": "^1.1.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
