修改目录结构

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
+    "sourceMap": false,
+    "inlineSourceMap": false, // 生成单个 soucemaps 文件，而不是将 sourcemaps 生成不同的文件
+    "inlineSources": false,
     "baseUrl": ".",
     "types": [
       "webpack-env"
