--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/echarts": "^4.6.1",
     "axios": "^0.19.2",
     "core-js": "^2.6.5",
+    "countup.js": "^2.0.5",
     "driver.js": "^0.9.8",
     "echarts": "^4.8.0",
     "element-ui": "^2.3.6",
     "mockjs": "^1.1.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-countup-v2": "^4.0.0",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1",
