--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@antv/g6": "^3.3.6",
-    "@tinymce/tinymce-vue": "^3.2.0",
+    "@tinymce/tinymce-vue": "^3.2.2",
     "@types/echarts": "^4.6.1",
     "axios": "^0.19.2",
     "core-js": "^2.6.5",
@@ -18,6 +18,7 @@
     "echarts": "^4.8.0",
     "element-ui": "^2.3.6",
     "mockjs": "^1.1.0",
+    "tinymce": "^5.4.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
