增加性能分析

--- a/package.json
+++ b/package.json
@@ -5,35 +5,37 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "analyz": "source-map-explorer 'dist/js/*.js'"
   },
   "dependencies": {
-    "@antv/g6": "^3.3.6",
-    "@tinymce/tinymce-vue": "^3.2.2",
-    "@types/echarts": "^4.6.1",
+    "@antv/g6": "^3.8.3",
+    "@tinymce/tinymce-vue": "^3.2.6",
+    "@types/echarts": "^4.9.0",
     "axios": "^0.19.2",
     "core-js": "^2.6.5",
-    "countup.js": "^2.0.5",
+    "countup.js": "^2.0.7",
     "driver.js": "^0.9.8",
-    "echarts": "^4.8.0",
-    "element-ui": "^2.3.6",
+    "echarts": "^4.9.0",
+    "element-ui": "^2.14.1",
     "mockjs": "^1.1.0",
-    "tinymce": "^5.4.0",
-    "vue": "^2.6.10",
-    "vue-class-component": "^7.0.2",
-    "vue-property-decorator": "^8.1.0",
-    "vue-router": "^3.0.3",
-    "vuex": "^3.0.1",
+    "source-map-explorer": "^2.5.1",
+    "tinymce": "^5.5.1",
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^8.5.1",
+    "vue-router": "^3.4.9",
+    "vuex": "^3.5.1",
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-typescript": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.0",
-    "typescript": "^3.4.3",
+    "typescript": "^3.9.7",
     "vue-cli-plugin-element-ui": "^1.1.4",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.12"
   }
 }
